Add new small changes

--- a/Credit Wise/Credit_wise.ipynb
+++ b/Credit Wise/Credit_wise.ipynb
@@ -5,12 +5,65 @@
    "id": "4ac85af8-b4ea-4c4f-8f6a-a9d1f3d2a514",
    "metadata": {},
    "source": [
-    "# Credit Wise"
+    "# 💳 CreditWise Loan Approval System"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "220dae2c",
+   "metadata": {},
+   "source": [
+    "CreditWise is an end-to-end supervised machine learning project designed to predict loan approval status based on applicant financial and demographic data. The system compares multiple classification algorithms to identify the most effective model for real-world loan decisioning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34ef9636",
+   "metadata": {},
+   "source": [
+    "🔍 Project Highlights\n",
+    "\n",
+    "Built a complete ML pipeline from data preprocessing to model evaluation\n",
+    "Performed Exploratory Data Analysis (EDA) to uncover patterns and insights\n",
+    "Applied feature engineering & data cleaning to improve model performance\n",
+    "Implemented binary classification for loan approval prediction\n",
+    "\n",
+    "Models Implemented\n",
+    "\n",
+    "* Logistic Regression\n",
+    "\n",
+    "* K-Nearest Neighbors (KNN)\n",
+    "\n",
+    "* Naive Bayes\n",
+    "\n",
+    "Model Evaluation Metrics\n",
+    "\n",
+    "* Precision\n",
+    "\n",
+    "* Recall\n",
+    "\n",
+    "* F1-Score\n",
+    "\n",
+    "* Confusion Matrix\n",
+    "\n",
+    "Tech Stack\n",
+    "\n",
+    "Python\n",
+    "\n",
+    "* Pandas, NumPy\n",
+    "\n",
+    "* Matplotlib, Seaborn\n",
+    "\n",
+    "* Scikit-learn\n",
+    "\n",
+    "Objective\n",
+    "\n",
+    "To build a reliable and interpretable ML system that assists financial institutions in making data-driven loan approval decisions while minimizing risk."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b04fcf05-4b7f-4e41-b221-8837bb19e4f9",
    "metadata": {},
    "outputs": [],
@@ -24,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c6cd03e-c2b7-4816-b73c-15c7b48bbe74",
    "metadata": {},
    "outputs": [],
@@ -34,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ee2e9915-82c2-460b-8e1a-5c623baf4199",
    "metadata": {},
    "outputs": [
